--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -1,39 +1,41 @@
-.contact {
+.list_style {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  padding: 16px;
-  background-color: #f9f9f9;
-  border: 1px solid #ddd;
+  gap: 20px;
+  background-color: #f0f0f0;
+  padding: 20px;
   border-radius: 8px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  width: calc(33.33% - 20px); /* Ширина для відображення по три в ряд */
+  flex-shrink: 0; /* Заборона зменшення контактів */
 }
 
-.info {
+.container_style {
   display: flex;
-  align-items: center;
-  margin-bottom: 8px;
+  flex-direction: column; /* Відображення елементів в стовпці */
 }
 
-.icon {
-  margin-right: 8px;
+.icon_style {
+  margin-right: 10px;
 }
 
-button {
-  padding: 8px 16px;
-  background-color: #ff4b4b;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
+.button_style {
+  margin-top: auto; /* Вирівнювання кнопки внизу блоку */
+}
+.list {
   display: flex;
-  align-items: center;
+  flex-wrap: wrap;
+  gap: 20px;
+  list-style-type: none;
+  padding: 0;
 }
 
-button:hover {
-  background-color: #ff0000;
-}
+.list-item {
+  display: flex;
 
-button .icon {
-  margin-right: 8px;
+  background-color: #f0f0f0;
+  padding: 12px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin-bottom: 20px; /* Відстань між рядками */
 }
