--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -1,14 +1,33 @@
-.contactList {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 16px;
-  min-height: 200px;
-  margin-top: 16px;
+/* ContactList.module.css */
+
+.list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  list-style-type: none;
+  padding: 0;
+  width: 100%;
 }
 
-.contactItem {
-  background-color: #fff;
-  padding: 16px;
+.listItem {
+  background-color: #f0f0f0;
+  padding: 20px;
   border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin-bottom: 20px; /* Відстань між рядками */
+  width: calc(33.33% - 20px);
+}
+
+.container_style {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.icon_style {
+  margin-right: 10px;
+}
+
+.button_style {
+  margin-top: auto;
 }
