--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,15 +1,34 @@
 .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
   max-width: 1200px;
   margin: 0 auto;
-  padding: 16px;
+  height: 100vh; /* высота экрана */
+}
+
+.formContainer {
+  width: 100%;
+  max-width: 600px;
+  position: sticky;
+  top: 0;
+  background-color: white;
+  z-index: 1000;
+  padding-bottom: 20px;
+}
+
+.contactsContainer {
+  width: 100%;
+  max-width: 600px;
+  overflow-y: auto;
+  flex-grow: 1;
 }
 
 .title {
-  text-align: center;
-  margin-bottom: 16px;
+  margin-bottom: 20px;
 }
 
 .subtitle {
-  text-align: center;
-  margin-top: 32px;
+  margin-top: 20px;
 }
